<resources>
    <string name="app_name">fireAction</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_function">Function</string>
    <string name="nav_support">Support</string>
    <string name="nav_recommend">Recommend</string>
    <string name="nav_share">Share</string>
    <string name="nav_import">Import</string>
    <string name="nav_export">Export</string>
    <string name="nav_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="register_button">Sign Up</string>
    <string name="reset_Password">Reset Password</string>
    <string name="signin_button">Sign In</string>
    <string name="forgetpassword_button">Forgotten Password ?</string>
    <string name="action_quit">Quit</string>

    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

</resources>
