<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_function"
            android:icon="@mipmap/ic_function"
            android:title="@string/nav_function" />
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/ic_thumb_up"
            android:title="@string/nav_recommend" />
    </group>

        <item android:title="Communicate" >
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_import"
                        android:icon="@mipmap/ic_import"
                        android:title="@string/nav_import" />
                    <item
                        android:id="@+id/nav_export"
                        android:icon="@mipmap/ic_export"
                        android:title="@string/nav_export" />
                </group>
            </menu>
        </item>

    <item android:title="@string/action_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@mipmap/gear"
                    android:title="@string/action_settings"
                    />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@mipmap/ic_logout"
                    android:title="@string/nav_logout"
                    />
            </group>
        </menu>
    </item>
</menu>
